--- a/index.html
+++ b/index.html
@@ -412,6 +412,10 @@
             </p>
         </div>
     </footer>
+    
+    <script src="vendors/js/respond.min.js"></script>
+    <script src="vendors/js/html5shiv.min.js"></script>
+    <script src="vendors/js/selectivizr.min.js"></script>
 </body>
 
 </html>
